--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@ body {
   --ash-black: #101010;
   --white: #f4fcfb;
   --pink: #ff304f;
-  --grey: #a5acaf;
+  --gray: #a5acaf;
 
   --headings: var(--font-leky)
 
@@ -14,13 +14,14 @@ body {
 
 body {
   text-align: center;
-  background: var(--background);
+  background-color: var(--ash-black);
   margin: 0;
   padding: 0;
   font-family: var(--font-montserrat);
+  font-size: 16px;
 }
 
-h1 {
+h1, h2 {
   font-family: var(--font-leky);
 }
 
