--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -1,20 +1,105 @@
 .heading {
-    color: var(--pink);
-    font-size: 4rem;
-    line-height: 6rem;
+  color: var(--pink);
+  font-size: 2.8rem;
+  line-height: 4rem;
 }
 
 .subheading {
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 500;
-    margin-top: 4rem;
-    font-family: var(--font-montserrat);
+  font-size: 0.8rem;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-top: 3.5rem;
+  font-family: var(--font-montserrat);
 }
 
 .portfolio {
+  font-size: 2rem;
+  text-transform: uppercase;
+  color: var(--pink);
+}
+
+.prl {
+  position: fixed;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+
+.prl__cover {
+  top: 0;
+  z-index: 1000;
+}
+
+.img {
+  width: 0;
+}
+
+.prl__headings {
+  top: calc(50% - 64px);
+  color: #fff;
+}
+
+.prl__bcg {
+  top: 0;
+}
+
+.prl__links {
+  top: calc(50% - 22px);
+  z-index: 3000;
+}
+
+@media (min-width: 615px) {
+  .img {
+    width: 790px;
+  }
+}
+
+@media (min-width: 689px) {
+  .img {
+    width: 930px;
+  }
+}
+
+@media (min-width: 768px) {
+  .heading {
+    font-size: 4rem;
+    line-height: 6rem;
+  }
+
+  .subheading {
+    font-size: 1rem;
+    margin-top: 4rem;
+  }
+
+  .img {
+    width: 100%;
+  }
+
+  .prl__headings {
+    top: calc(50% - 96px);
+  }
+}
+
+@media (min-width: 2560px) {
+  .img {
+    height: 100vh;
+  }
+
+  .heading {
+    font-size: 6.5rem;
+    line-height: 9rem;
+  }
+
+  .subheading {
     font-size: 2rem;
-    text-transform: uppercase;
-    color: var(--pink);
-    
+    margin-top: 6rem;
+  }
+
+  .prl__headings {
+    top: calc(50% - 20vh);
+  }
+
+  .portfolio {
+    font-size: 4rem;
+  }
 }
