--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -27,11 +27,15 @@
 
 .prl__cover {
   top: 0;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .img {
   width: 0;
+}
+
+.visible {
+  z-index: 2;
 }
 
 .prl__headings {
@@ -45,7 +49,6 @@
 
 .prl__links {
   top: calc(50% - 22px);
-  z-index: 3000;
 }
 
 @media (min-width: 615px) {
