--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -1,35 +1,40 @@
 .nav {
-    display: none
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 300px;
 }
 
 .title {
-    font-family: var(--font-leky);
-    color: var(--white);
+  font-family: var(--font-leky);
+  color: var(--white);
 }
 
 .span {
-    font-size: 0.5rem;
+  font-size: 0.5rem;
 }
 
 .link {
-    color: var(--white);
-    text-transform: uppercase;
-    padding-left: 4rem;
+  color: var(--white);
+  text-transform: uppercase;
+  padding-left: 4rem;
 }
 
 .links__container {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 
 @media (min-width: 768px) {
-    .nav {
+  /* .nav {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         width: 90vw;
         position: fixed;
-        top: 2rem;
+        top: 1rem;
         left: 4rem;
         z-index: 1;
-    }
+    } */
 }
