--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -3,13 +3,14 @@
   top: 0;
   left: 0;
   bottom: 0;
-  width: 100%;
+  width: 300px;
   z-index: 1;
 }
 
 .title {
   font-family: var(--font-leky);
   color: var(--white);
+  padding: 1rem 0 0 6rem ;
 }
 
 .span {
@@ -18,7 +19,7 @@
 
 .header {
   display: flex;
-  padding: 1rem 1rem 0 1rem;
+  /* padding: 1rem 1rem 0 1rem; */
 }
 
 @media (min-width: 768px) {
