--- a/styles/dropdown.module.css
+++ b/styles/dropdown.module.css
@@ -1,12 +1,10 @@
 .background {
   position: absolute;
   top: 0;
-  right: 0;
+  left: 0;
   bottom: 0;
-  width: 320px;
-  height: 100vh;
+  width: 300px;
   background: var(--white);
-  z-index: 1;
 }
 
 .button {
@@ -18,12 +16,11 @@
   cursor: pointer;
   position: absolute;
   top: 18px;
-  right: 15px;
+  left: 15px;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background: transparent;
-  z-index: 2;
 }
 
 .ul,
@@ -33,14 +30,14 @@
 }
 
 .ul {
-  padding: 25px;
+  padding: 0px;
   position: absolute;
   top: 100px;
   right: 0;
   width: 230px;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: flex-start;
 }
 
 .li {
@@ -57,7 +54,7 @@
 
 .li__container {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   align-items: center;
 }
 
@@ -70,8 +67,9 @@
 }
 
 .arrow {
-  margin-right: 1rem;
+  margin-left: 1rem;
   display: none;
+  transform: rotate(180deg);
 }
 
 .icon__placeholder {
