--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,23 +1,16 @@
+.title {
+  font-size: 2.5rem;
+  /* color: var(--pink); */
+}
+
 .layoutCards {
   width: 100%;
   height: 100%;
   padding: 3rem;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  gap: 1.5rem;
-  background: #ff471a;
-}
-
-.dimLayer {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  left: 0;
-  top: 0;
-  background: black;
-  opacity: 0;
-  pointer-events: none;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 8rem);
+  gap: 2rem;
 }
 
 .openedCard {
@@ -35,11 +28,10 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  flex-direction: column;
 }
 
 .openedCard > div {
-  background: white;
+  background: black;
   height: 100%;
   width: 100%;
   margin: 0 1rem;
@@ -52,35 +44,155 @@
 }
 
 .card {
-  background: white;
   border-radius: 15px;
   width: 100%;
-  height: 100px;
+  height: 100%;
   cursor: pointer;
   position: relative;
   box-shadow: none;
-
+  display: flex;
 }
 
 .card:nth-child(1) {
-  grid-column: 1 / span 2;
+  grid-column: 1 / 4;
   grid-row: 1;
+  background-image: url("../public/images/card1.jpg");
+  background-size: cover;
+  background-position: center;
 }
+
+.openCard1 {
+  background-image: url("../public/images/card1.jpg");
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 10rem;
+}
+/* .card:nth-child(1):hover {
+  background-image: url("../public/images/card1.jpg");
+  background-size: cover;
+  background-position: center;
+  opacity: 1;
+} */
 
 .card:nth-child(2) {
-  grid-column: 3;
+  grid-column: 4 / 5;
   grid-row: 1;
+  background-image: url("../public/images/card2.jpg");
+  background-size: cover;
+  background-position: center;
 }
+
+.openCard2 {
+  background-image: url("../public/images/card2.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+/* .card:nth-child(2):hover {
+  background-image: url("../public/images/card2.jpg");
+  background-size: cover;
+  background-position: center;
+} */
 
 .card:nth-child(3) {
-  grid-column: 1;
+  grid-column: 1 / 3;
   grid-row: 2;
+  background-image: url("../public/images/card3.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
-.card:nth-child(4) {
-  grid-column: 2 / span 2;
-  grid-row: 2;
+.openCard3 {
+  background-image: url("../public/images/card3.jpg");
+  background-size: cover;
+  background-position: center;
 }
+/* .card:nth-child(3):hover {
+  background-image: url("../public/images/card3.jpg");
+  background-size: cover;
+  background-position: center;
+} */
+
+.card:nth-child(4) {
+  grid-column: 3 / 5;
+  grid-row: 2;
+  background-image: url("../public/images/card4.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.openCard4 {
+  background-image: url("../public/images/card4.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+/* .card:nth-child(4):hover {
+  background-image: url("../public/images/card4.jpg");
+  background-size: cover;
+  background-position: center;
+} */
+
+.card:nth-child(5) {
+  grid-column: 1 / 2;
+  grid-row: 3;
+  background-image: url("../public/images/card5.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.openCard5 {
+  background-image: url("../public/images/card5.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+/* .card:nth-child(5):hover {
+  background-image: url("../public/images/card5.jpg");
+  background-size: cover;
+  background-position: center;
+} */
+
+.card:nth-child(6) {
+  grid-column: 2 / 4;
+  grid-row: 3;
+  background-image: url("../public/images/card6.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.openCard6 {
+  background-image: url("../public/images/card6.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+/* .card:nth-child(6):hover {
+  background-image: url("../public/images/card6.jpg");
+  background-size: cover;
+  background-position: center;
+} */
+
+.card:nth-child(7) {
+  grid-column: 4 / 5;
+  grid-row: 3;
+  background-image: url("../public/images/card7.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+.openCard7 {
+  background-image: url("../public/images/card7.jpg");
+  background-size: cover;
+  background-position: center;
+}
+
+/* .card:nth-child(7):hover {
+  background-image: url("../public/images/card7.jpg");
+  background-size: cover;
+  background-position: center;
+} */
 
 .cardsContainer {
   width: 100%;
@@ -99,3 +211,15 @@
 .cardsContainer::-webkit-scrollbar {
   display: none;
 }
+
+.card__heading {
+  font-size: 1.5rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 2rem;
+  text-align: left;
+  position: absolute;
+  /* top: calc(5rem - 1rem); */
+}
+
+
