--- a/styles/portfolio.module.css
+++ b/styles/portfolio.module.css
@@ -1,3 +1,9 @@
+.container {
+  background-image: url('../public/images/portfolioBcg.jpg');
+  background-size: cover;
+  background-attachment: scroll;
+}
+
 .section {
   height: 100vh;
   display: flex;
