--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,225 +1,27 @@
-.title {
-  font-size: 2.5rem;
-  /* color: var(--pink); */
-}
 
-.layoutCards {
-  width: 100%;
-  height: 100%;
-  padding: 3rem;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 8rem);
-  gap: 2rem;
-}
 
-.openedCard {
-  border-radius: 15px;
-  cursor: pointer;
-  height: calc(100% - 10rem);
-  width: 40rem;
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.openedCard > div {
-  background: black;
-  height: 100%;
-  width: 100%;
-  margin: 0 1rem;
-  border-radius: 15px;
-  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-.openedCard > div:first-child {
-  margin-left: 0;
-}
-
-.card {
-  border-radius: 15px;
-  width: 100%;
-  height: 100%;
-  cursor: pointer;
-  position: relative;
-  box-shadow: none;
-  display: flex;
-}
-
-.card:nth-child(1) {
-  grid-column: 1 / 4;
-  grid-row: 1;
-  background-image: url("../public/images/card1.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard1 {
-  background-image: url("../public/images/card1.jpg");
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 10rem;
-}
-/* .card:nth-child(1):hover {
-  background-image: url("../public/images/card1.jpg");
-  background-size: cover;
-  background-position: center;
-  opacity: 1;
-} */
-
-.card:nth-child(2) {
-  grid-column: 4 / 5;
-  grid-row: 1;
-  background-image: url("../public/images/card2.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard2 {
-  background-image: url("../public/images/card2.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/* .card:nth-child(2):hover {
-  background-image: url("../public/images/card2.jpg");
-  background-size: cover;
-  background-position: center;
-} */
-
-.card:nth-child(3) {
-  grid-column: 1 / 3;
-  grid-row: 2;
-  background-image: url("../public/images/card3.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard3 {
-  background-image: url("../public/images/card3.jpg");
-  background-size: cover;
-  background-position: center;
-}
-/* .card:nth-child(3):hover {
-  background-image: url("../public/images/card3.jpg");
-  background-size: cover;
-  background-position: center;
-} */
-
-.card:nth-child(4) {
-  grid-column: 3 / 5;
-  grid-row: 2;
-  background-image: url("../public/images/card4.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard4 {
-  background-image: url("../public/images/card4.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/* .card:nth-child(4):hover {
-  background-image: url("../public/images/card4.jpg");
-  background-size: cover;
-  background-position: center;
-} */
-
-.card:nth-child(5) {
-  grid-column: 1 / 2;
-  grid-row: 3;
-  background-image: url("../public/images/card5.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard5 {
-  background-image: url("../public/images/card5.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/* .card:nth-child(5):hover {
-  background-image: url("../public/images/card5.jpg");
-  background-size: cover;
-  background-position: center;
-} */
-
-.card:nth-child(6) {
-  grid-column: 2 / 4;
-  grid-row: 3;
-  background-image: url("../public/images/card6.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard6 {
-  background-image: url("../public/images/card6.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/* .card:nth-child(6):hover {
-  background-image: url("../public/images/card6.jpg");
-  background-size: cover;
-  background-position: center;
-} */
-
-.card:nth-child(7) {
-  grid-column: 4 / 5;
-  grid-row: 3;
-  background-image: url("../public/images/card7.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-.openCard7 {
-  background-image: url("../public/images/card7.jpg");
-  background-size: cover;
-  background-position: center;
-}
-
-/* .card:nth-child(7):hover {
-  background-image: url("../public/images/card7.jpg");
-  background-size: cover;
-  background-position: center;
-} */
-
-.cardsContainer {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  line-height: 33rem;
-  max-width: 100%;
+.parallax {
+  overflow: hidden;
+  /* letter-spacing: -2px; */
+  /* line-height: 0.8; */
+  margin: 0;
   white-space: nowrap;
-  overflow-x: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+  display: flex;
+  flex-wrap: nowrap;
 }
 
-.cardsContainer::-webkit-scrollbar {
-  display: none;
+.parallax span {
+  display: block;
+  margin-right: 5rem;
+  font-family: var(--font-leky);
 }
 
-.card__heading {
-  font-size: 1.5rem;
-  font-weight: 700;
+.parallax .scroller {
+  font-weight: 600;
   text-transform: uppercase;
-  padding: 2rem;
-  text-align: left;
-  position: absolute;
-  /* top: calc(5rem - 1rem); */
+  font-size: 64px;
+  display: flex;
+  white-space: nowrap;
+  display: flex;
+  flex-wrap: nowrap;
 }
-
-
