--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -35,7 +35,7 @@
 
 .heading {
   text-transform: uppercase;
-  font-size: 2.5rem;
+  font-size: 1.5rem;
 }
 
 .heading__experience {
@@ -67,27 +67,33 @@
 
 .container__item {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   padding-top: 0.5rem;
+  gap: 0.75rem;
 }
 
 .date {
   grid-column: 1 / 2;
   max-width: 12.6rem;
-  font-weight: 600;
+  font-weight: 500;
+  font-size: 0.75rem;
   text-align: start;
 }
 
 .container__text {
-  grid-column: 2 / 4;
+  grid-column: 2 / 5;
   text-align: start;
   max-width: 38rem;
 }
 
 .title {
-  font-weight: 600;
-  font-size: 1.1rem;
+  font-weight: 500;
+  font-size: 1rem;
   padding-bottom: 0.5rem;
+}
+
+.place {
+  font-size: 1rem;
 }
 
 .desc {
@@ -105,11 +111,8 @@
 
 .container__skills {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-}
-
-.container__skill {
-  margin: 0 3rem;
 }
 
 .skills {
@@ -138,4 +141,39 @@
 
 .language__level {
   text-transform: uppercase;
+}
+
+@media (min-width: 425px) {
+  .container__item {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .date {
+    font-weight: 600;
+  }
+
+  .container__text {
+    grid-column: 2 / 4;
+  }
+}
+
+@media (min-width: 930px) {
+  .container__skills {
+    flex-direction: row;
+  }
+  .container__skill {
+    margin: 0 3rem;
+  }
+}
+
+@media (min-width: 1000px) {
+  .heading {
+    font-size: 2rem;
+  }
+}
+
+@media (min-width: 1080px) {
+  .heading {
+    font-size: 2.5rem;
+  }
 }
