--- a/styles/page.module.css
+++ b/styles/page.module.css
@@ -48,7 +48,13 @@
 }
 
 .prl__links {
-  top: calc(50% - 22px);
+  top: calc(50% - 73px);
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 615px) {
